- Bug #44154: [DOC] Return 3 elements at all times. If the dbh stmt doesn't have   an error code we used to return an array with one element. For the sake   of consistency and verification of returned values at userland we are now   returning an array with 3 elements. Note the two last elements are null but   present

- Bug #44153: [DOC] If the error code returned by the DBH is null, we return
  a null value. This is used in order to help with empty error codes.